<resources>
    <string name="app_name">Calculator</string>
    <string name="c">c</string>
    <string name="parentheses">()</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="menus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="plus_minus">+/-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equally">=</string>
    <string name="division">÷</string>
    <string name="backspace"><![CDATA[<<]]></string>
    <string name="enter_the_value">Enter the value</string>
    <string name="result">result</string>
    <string name="settings">settings</string>
    <string name="night_mode_settings">Ночной режим</string>
    <string name="settings_title">НАСТРОЙКИ</string>
</resources>