<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:columnCount="4"
    android:rowCount="6"
    android:theme="@style/MyCoolStyle">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/settings"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_column="3"
        android:layout_gravity="center"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/backspace"
        android:textSize="10sp"
        tools:ignore="SmallSp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/c"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_parentheses"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/parentheses"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/percent"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/division"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_7"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_8"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_9"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/x"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_4"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_5"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_6"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/menus"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_1"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_2"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_3"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/plus"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus_minus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/plus_minus"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/_0"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/numbers_color"
        android:text="@string/dot"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:backgroundTint="@color/custom_yellow"
        android:text="@string/equally"
        android:textSize="@dimen/button_text" />

</GridLayout>